--- a/index.html
+++ b/index.html
@@ -4,7 +4,109 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/stylesheet-regular.css" />
+    <link rel="stylesheet" href="css/stylesheet-bold.css" />
     <title>Lesson-11</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="#"> <img src="img/logo.png" alt="logo" /> </a>
+      <nav>
+        <ul id="li">
+          <li>
+            <a href="#"> მთავარი</a>
+          </li>
+          <li>
+            <a href="#"> ჩვენს შესახებ</a>
+          </li>
+          <li>
+            <a href="#"> სერვისები</a>
+          </li>
+          <li>
+            <a href="#"> პროექტები</a>
+          </li>
+          <li>
+            <a href="#"> პარტნიორები</a>
+          </li>
+          <li class="contact">
+            <a href="#"> კონტაქტი</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <section>
+      <article class="picture">
+        <img src="img/1.2.png" />
+        <h2>რატომ ვიყენებთ მას და საიდან მოდის ეს ტექსტი?</h2>
+      </article>
+      <article>
+        <div>
+          <img src="img/3.1.png" alt="1" />
+          <img src="img/4.1.png" alt="2" />
+          <img src="img/5.1.png" alt="3" />
+          <img src="img/6.1.png" alt="4" />
+          <img src="img/7.1.png" alt="5" />
+        </div>
+      </article>
+      <article>
+        <p class="first-p">
+          ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის
+          ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის
+          გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი გადანაწილების ტექსტს,
+          ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია ხოლმე. შედეგად, ტექსტი
+          ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა კი შეუძლებელია. დღეს უამრავი
+          პერსონალური საგამომცემლო პროგრამა და ვებგვერდი იყენებს Lorem Ipsum-ს,
+          როგორც დროებით ტექსტს წყობის შესავსებად; Lorem Ipsum-ის მოძებნისას კი
+          საძიებო სისტემები ბევრ დაუსრულებელ გვერდს გვიჩვენებენ. წლების მანძილზე
+          ამ ტექსტის უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის
+          გამო, ზოგი კი — განზრახ, ხუმრობით.
+        </p>
+        <p>
+          გsავრცელებული მოსაზრებით, Lorem Ipsum შემთხვევითი ტექსტი სულაც არაა.
+          მისი ფესვები ჯერკიდევ ჩვ. წ. აღ-მდე 45 წლის დროინდელი კლასიკური
+          ლათინური ლიტერატურიდან მოდის. ვირჯინიის შტატში მდებარე ჰემპდენ-სიდნეის
+          კოლეჯის პროფესორმა რიჩარდ მაკკლინტოკმა აიღო ერთ-ერთი ყველაზე იშვიათი
+          ლათინური სიტყვა “consectetur” Lorem Ipsum-პასაჟიდან და გადაწყვიტა
+          მოეძებნა იგი კლასიკურ ლიტერატურაში. ძიება შედეგიანი აღმოჩნდა — ტექსტი
+          Lorem Ipsum გადმოწერილი ყოფილა ციცერონის “de Finibus Bonorum et
+          Malorum”-ის 1.10.32 და 1.10.33 თავებიდან. ეს წიგნი ეთიკის თეორიის
+          ტრაქტატია, რომელიც რენესანსის პერიოდში ძალიან იყო გავრცელებული. Lorem
+          Ipsum-ის პირველი ხაზი, “Lorem ipsum dolor sit amet…” სწორედ ამ წიგნის
+          1.10.32 თავიდანაა. მათთვის, ვისაც აინტერესებს, ქვევით მოყვანილია Lorem
+          Ipsum-ის ორიგინალი ნაწყვეტი 1500-იანი წლებიდან. ასევე შეგიძლიათ ნახოთ
+          1.10.32 და 1.10.33 თავები ციცერონის “de Finibus Bonorum et
+          Malorum”-დან, რომელსაც თან ერთვის 1914 წელს ჰ. რექჰამის შესრულებული
+          ინგლისურენოვანი თარგმანი.
+        </p>
+        <p>
+          დღეს უკვე Lorem Ipsum-პასაჟის უამრავი ვერსია არსებობს. მათი დიდი
+          ნაწილი ხუმრობით არის შეცვლილი, ბევრი კი უბრალოდ სიტყვების შემთხვევითი
+          გენერირებით დაიწერა. ინტერნეტში არსებული გენერატორები, როგორც წესი,
+          წინასწარ განსაზღვრული ტექსტის ნაგლეჯს იმეორებენ ხოლმე, ამიტომ ეს
+          პირველი ნამდვილი გენერატორია. იგი რთული და მართებული სტრუქტურის
+          წინადადებების ასაწყობად 200-მდე ლათინური სიტყვისგან შემდგარ ლექსიკონს
+          იყენებს. შედეგად მიიღება ტექსტი, რომელიც ვიზუალურად მაქსიმალურად
+          ახლოსაა რეალურთან. გენერირებული Lorem Ipsum არასოდეს არ არის
+          გამეორებადი, შემთხვევითი სიტყვების ან ხუმრობების შემცველი.
+        </p>
+        <h3 class="add-more">
+          <a href="#"> დამატებითი ინფორმაცია</a>
+        </h3>
+      </article>
+    </section>
+    <footer>
+      <h1 class="footer-h1">კონტაქტი</h1>
+      <p id="footer-p">
+        Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია. იგი
+        სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა მბეჭდავმა ამწყობ
+        დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.
+      </p>
+      <p class="final-p">ყველა უფლება დაცულია</p>
+      <h5>
+        დამზადებულია <img src="img/guli.svg" alt="guli" - />ით
+        <img src="img/2.1.png" />
+      </h5>
+    </footer>
+  </body>
 </html>
