--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/stylesheet-regular.css" />
-    <link rel="stylesheet" href="css/stylesheet-bold.css" />
     <title>Lesson-11</title>
   </head>
   <body>
-    <header>
-      <a href="#"> <img src="img/logo.png" alt="logo" /> </a>
-      <nav>
-        <ul id="li">
+    <div class="container">
+      <div> <a class="logo23" href="#"><img src="img/logo.png" alt="logo" /></div>
+      <div class="nav">
+        <ul class="li">
           <li>
             <a href="#"> მთავარი</a>
           </li>
@@ -33,15 +31,15 @@
             <a href="#"> კონტაქტი</a>
           </li>
         </ul>
-      </nav>
-    </header>
+      </div>
+    </div>
     <section>
       <article class="picture">
         <img src="img/1.2.png" />
         <h2>რატომ ვიყენებთ მას და საიდან მოდის ეს ტექსტი?</h2>
       </article>
-      <article>
-        <div>
+      <article class="picture2">
+        <div class="img4">
           <img src="img/3.1.png" alt="1" />
           <img src="img/4.1.png" alt="2" />
           <img src="img/5.1.png" alt="3" />
@@ -49,7 +47,7 @@
           <img src="img/7.1.png" alt="5" />
         </div>
       </article>
-      <article>
+      <article class="paragraph">
         <p class="first-p">
           ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის
           ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის
@@ -90,12 +88,14 @@
           ახლოსაა რეალურთან. გენერირებული Lorem Ipsum არასოდეს არ არის
           გამეორებადი, შემთხვევითი სიტყვების ან ხუმრობების შემცველი.
         </p>
+        <div class="details">
         <h3 class="add-more">
           <a href="#"> დამატებითი ინფორმაცია</a>
         </h3>
+        </div>
       </article>
     </section>
-    <footer>
+    <footer> 
       <h1 class="footer-h1">კონტაქტი</h1>
       <p id="footer-p">
         Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია. იგი
@@ -107,6 +107,6 @@
         დამზადებულია <img src="img/guli.svg" alt="guli" - />ით
         <img src="img/2.1.png" />
       </h5>
-    </footer>
+    </footer> -->
   </body>
 </html>
